# sck-core-api

./: .gitignore  .lambda  .pylintrc  README.md  pylint.sh  pyproject.toml  pytest.ini  start.ps1  start.sh
.github/: copilot-instructions.md
core_api/: __init__.py  _version.py  actions.py  constants.py  direct.py  handler.py  handler_direct.py  handler_proxy.py  proxy.py  request.py  response.py  security.py  types.py
core_api/ai/: ai_client.py  idempotency.py  service.py
core_api/api/: __init__.py  apis.py  auth.py  auth_handler.py  fast_api.py  handler.py  headers.py  proxy_headers.py  router.py  tools.py
core_api/auth/: auth_audity.py  auth_client.py  auth_direct.py  auth_github.py  auth_oauth.py  auth_passkey.py  handler.py  router.py  tools.py
core_api/dev/: metrics.py
core_api/email/: constants.py  smtp.py
core_api/email/templates/: authcode.html.j2  authcode.txt.j2  base_email.html.j2  passupdated.html.j2  passupdated.txt.j2  welcome.html.j2  welcome.txt.j2
core_api/event/: event.py
core_api/facts/: __init__.py  facter.py
core_api/item/: app.py  branch.py  build.py  component.py  portfolio.py
core_api/oauth/: auth_client.py  auth_creds.py  auth_direct.py  auth_github.py  auth_passkey.py  auth_server.py  client_management.py  constants.py  direct_auth.py  github_sso.py  handler.py  oauth_server.py  proxy_auth.py  router.py  tools.py
core_api/profile/: handler.py  profile.py
core_api/registry/: app.py  client.py  portfolio.py  zone.py
core_api/static/: index.html
core_api/task/: __init__.py  apply.py  compile.py  deploy.py  plan.py  release.py  rolleback.py  router.py  teardown.py  upload.py  verify.py
dev/: seed_client.py
platform/: core-automation-api-gateway-output.yaml  core-automation-api-gateway.yaml  core-automation-api-roles-output.yaml  core-automation-api-roles.yaml  core_automation_roles.yaml  deployspec.yaml  testme.py
platform/components/: .cfnlintrc  api-db.yaml  core-automation-api-facts.yaml  core-automation-api-gateway-output.yaml  core-automation-api-gateway.yaml.j2  core-automation-api-output.yaml  core-automation-api-roles-output.yaml  core-automation-api-roles.yaml  core-automation-api.yaml.j2  core-automation-apps.json  core-automation-bootstrap.yaml.j2  core-automation-clients.json  core-automation-component-output.yaml  core-automation-component.yaml.j2  core-automation-deployspec-output.yaml  core-automation-deployspec.yaml.j2  core-automation-execute-output.yaml  core-automation-execute.yaml.j2  core-automation-invoker-output.yaml  core-automation-invoker.yaml.j2  core-automation-runner-output.yaml  core-automation-runner.yaml.j2  deploy.py  deploy_client.ps1  deploy_facts.ps1  eits-core-automation-api-roles.yaml  eits-core-automation-api.yaml  gen-templates.py
platform/files/: apps_lambda.py  core-automation-portfolios.json  core-automation-zones.json  cors.json  dump_data.py  events_lambda.py  items_lambda.py  portfolio_lambda.py  static_file_lambda.py  zones_lambda.py
platform/vars/: branch-vars.yaml
tests/: bootstrap.py  enc_key.py  facts-apps.yaml  facts-clients.yaml  facts-portfolios.yaml  facts-profiles.yaml  facts-zones.yaml  sample.yaml  test.txt  test_ai_idempotency.py  test_api.py  test_api_data.py  test_auth.py  test_browser_auth.py  test_context_state.yaml  test_crededntials.py  test_emulator_response.py  test_encrypt.py  test_facts.py  test_facts_data.py  test_interpreter.py  test_pass.py  test_seed_data.py  verify_jwt.py
tests/testaction/: release-persist.actions  teardown-persist.actions
