[build-system]
requires = [ "poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0",]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "core-api"
version = "0.1.0"
description = "Core-API for Core-Automation lambda function"
authors = [ "James Barwick <jbrwick@me.com>",]
license = "GPL-3.0-only"
readme = "README.md"
maintainers = [ "James Barwick <jbarwick@me.com>",]
keywords = [ "simple-cloud-kit", "core-automation", "core", "sck", "api",]
[[tool.poetry.source]]
name = "nexus"
url = "https://monster-jj.jvj28.com:9091/repository/pypi/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "explicit"

[tool.poetry-dynamic-versioning]
enable = true
bump = true
ignore-untracked = true
style = "semver"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.124"
netaddr = "^1.2.1"
pyyaml = "^6.0.1"
pyyaml-include = "^2.1"
filters = "^1.3.2"
deepdiff = "^7.0.1"
jinja2 = "^3.1.4"
jmespath = "^1.0.1"
pydantic = "^2.9.2"

[tool.poetry.dependencies.core-framework]
path = "../core-framework"
develop = true

[tool.poetry.dependencies.core-invoker]
path = "../core-invoker"
develop = true

[tool.poetry.dependencies.core-db]
path = "../core-db"
develop = true

[tool.poetry-dynamic-versioning.files."core_api/_version.py"]
persistent-substitution = true
initial-content = "  \"\"\"\n  This is the version information for this template\n  \"\"\"\n  __version__ = \"0.0.0\"\n  __version_tuple__ = (0, 0, 0)\n"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.3"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pylance = "^0.11.0"
pylint = "^3.2.2"
types-pyyaml = "^6.0.12.20240311"
boto3-stubs = "^1.34.115"
types-tabulate = "^0.9.0.20240106"
cfn-lint = "^1.18.4"
flake8 = "^7.1.1"
yamllint = "^1.35.1"
auto-changelog = "^0.6.0"
black = "^24.10.0"
python-dotenv = "^1.0.1"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^0.24.0"
uvicorn = "^0.32.1"
fastapi = "^0.115.6"
httpx = "^0.28.1"
