[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "sck-core-api"
version = "0.0.11-pre.5+f304d65"
description = "Core-API for Core-Automation lambda function"
authors = ["James Barwick <jbrwick@me.com>"]
license = "GPL-3.0-only"
readme = "README.md"
maintainers = ["James Barwick <jbarwick@me.com>"]
keywords = ["sck", "core", "aws", "cloud", "automation"]

[[tool.poetry.packages]]
include = "core_api"

[[tool.poetry.source]]
name = "nexus"
url = "https://monster-jj.jvj28.com:9091/repository/pypi/simple/"
priority = "primary"

[tool.poetry-dynamic-versioning]
enable = true
bump = true
ignore-untracked = true
style = "semver"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = ">=1.39.9"
python-dotenv = "^1.0.1"
botocore = ">=1.39.9"
netaddr = "^1.3.0"
filters = "^1.3.2"
deepdiff = "^7.0.1"
jinja2 = "^3.1.4"
jmespath = "^1.0.1"
pydantic = "^2.10.3"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
jwcrypto = "^1.5.6"
cryptography = "^45.0.6"
python-multipart = "^0.0.20"
bcrypt = "^4.3.0"

[tool.poetry.dependencies.sck-core-organization]
path = "../sck-core-organization"
develop = true

[tool.poetry.dependencies.sck-core-invoker]
path = "../sck-core-invoker"
develop = true

[tool.poetry.dependencies.sck-core-db]
path = "../sck-core-db"
develop = true

[tool.poetry.dependencies.sck-core-framework]
path = "../sck-core-framework"
develop = true
[tool.poetry-dynamic-versioning.substitution]
files = ["core_api/__init__.py"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pylance = "^0.21.0"
boto3-stubs = ">=1.39.9"
cfn-lint = "^1.22.3"
flake8 = "^7.1.1"
yamllint = "^1.35.1"
auto-changelog = "^0.6.0"
black = "^24.10.0"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^0.25.0"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
httpx = "^0.28.1"
moto = "^5.1.9"

[tool.poetry.group.prod.dependencies]
gunicorn = "^23.0.0"

[tool.black]
line-length = 132
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.direnv
  | \.eggs
  | \.git
  | \.github
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.pants.d
  | \.pytype
  | \.ruff_cache
  | \.svn
  | \.tox
  | \.venv
  | __pypackages__
  | _build
  | buck-out
  | build
  | dist
  | node_modules
  | venv
)/
'''

# Optional: Other tools in same file
[tool.isort]
profile = "black"
line_length = 132

