[project]
name = "sck-core-api"
version = "1.3.0"
description = "Core-API for Core-Automation lambda function"
authors = [{ name = "James Barwick", email = "jbrwick@me.com" }]
license = "GPL-3.0-only"
readme = "README.md"
maintainers = [{ name = "James Barwick", email = "jbarwick@eits.com.sg" }]
keywords = ["sck", "core", "aws", "cloud", "automation"]
requires-python = ">=3.11,<3.13"


dependencies = [
  "python-dotenv (>=1.0.1)",
  "boto3 (>=1.39.7,<1.50.0)",
  "botocore (>=1.39.7,<1.50.0)",
  "netaddr (>=1.3.0)",
  "filters (>=1.3.2)",
  "deepdiff (>=7.0.1)",
  "jinja2 (>=3.1.4)",
  "jmespath (>=1.0.1)",
  "pydantic (>=2.4,<2.11)",
  "pyjwt>=2.10.1",
  "crypto>=1.4.1",
  "jwcrypto (>=1.5.6)",
  "cryptography (>=42.0.0,<44.0.0)",
  "python-multipart (>=0.0.20)",
  "bcrypt (>=4.0.0)",
  "webauthn (>=2.5.0)",
  "cffi (>=1.17.1)",
  "sck-core-framework",
  "sck-core-db",
  "sck-core-organization",
  "sck-core-invoker",
  "cfn-lint>=1.40.0",
]

[tool.hatch.build.targets.wheel]
packages = ["core_api"]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-cov>=6.0.0",
  "pytest-dotenv>=0.5.2",
  "pytest-asyncio>=0.25.0",
  "pytest-asyncio>=0.25.0",
  "pytest-dotenv>=0.5.2",
  "pylance>=0.21.0",
  "boto3-stubs>=1.34.51,<1.35.0",
  "cfn-lint>=1.22.3",
  "yamllint>=1.35.1",
  "auto-changelog>=0.6.0",
  "uvicorn>=0.34.0",
  "fastapi>=0.115.6",
  "httpx>=0.28.1",
  "moto>=5.1.9",
  "prometheus-client>=0.20.0",
  "flake8>=7.1.1",
  "black>=25.9.0",
]

prod = ["gunicorn>=23.0.0"]

[tool.black]
line-length = 132
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
skip-string-normalization = true
extend-exclude = ''' /(.venv|build|dist|htmlcov)/ '''
exclude = '''
/(
    \.direnv
  | \.eggs
  | \.git
  | \.github
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.pants.d
  | \.pytype
  | \.ruff_cache
  | \.svn
  | \.tox
  | \.venv
  | __pypackages__
  | _build
  | buck-out
  | build
  | dist
  | node_modules
  | venv
)/
'''

# Optional: Other tools in same file
[tool.isort]
profile = "black"
line_length = 132

[tool.uv.sources]
sck-core-framework = { path = "../sck-core-framework", editable = true }
sck-core-db = { path = "../sck-core-db", editable = true }
sck-core-invoker = { path = "../sck-core-invoker", editable = true }
sck-core-organization = { path = "../sck-core-organization", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
